@@ -1,11 +1,12 @@
 package com.datastax.spark.connector.streaming
 
-import akka.actor.Actor
+import akka.actor.{ActorRef, Actor}
+import org.apache.spark.Logging
+import org.apache.spark.streaming.StreamingContext
+import org.apache.spark.streaming.scheduler.StreamingListener
+import org.apache.spark.streaming.receiver.ActorHelper
 import com.datastax.spark.connector.SparkContextFunctions
 import com.datastax.spark.connector.rdd.reader.RowReaderFactory
-import org.apache.spark.streaming.StreamingContext
-import org.apache.spark.streaming.receiver
-import org.apache.spark.streaming.receiver.ActorHelper
 
 import scala.reflect.ClassTag
 
@@ -21,8 +22,14 @@ class StreamingContextFunctions (ssc: StreamingContext) extends SparkContextFunc
 
 }
 
-/** Simple akka.actor.Actor mixin to implement further with Spark 1.0.1 upgrade. */
-trait SparkStreamingActor extends Actor with ActorHelper
+/** Simple akka.actor.Actor mixin. */
+trait SparkStreamingActor extends Actor with ActorHelper with Logging {
+
+  override def preStart(): Unit = {
+    log.info(s"${self.path} starting.")
+    context.system.eventStream.publish(StreamingEvent.ReceiverStarted(self))
+  }
+}
 
 abstract class TypedStreamingActor[T : ClassTag] extends SparkStreamingActor {
 
@@ -31,7 +38,31 @@ abstract class TypedStreamingActor[T : ClassTag] extends SparkStreamingActor {
   }
 
   def push(event: T): Unit =
-    store(event) 
+    store(event)
+}
+
+/** Simple StreamingListener. Currently just used to listen for initialization of a receiver.
+  * Implement further to access information about an ongoing streaming computation.*/
+class SparkStreamingListener[T: ClassTag] extends StreamingListener {
+  import org.apache.spark.streaming.scheduler.StreamingListenerReceiverStarted
+  import java.util.concurrent.atomic.AtomicBoolean
+
+  private val listenerInitialized = new AtomicBoolean()
+
+  def initialized: Boolean = listenerInitialized.get
+
+  /** Called when a receiver has been started */
+  override def onReceiverStarted(started: StreamingListenerReceiverStarted): Unit =
+    listenerInitialized.set(true)
 
 }
 
+object StreamingEvent {
+  /** Base marker for Receiver events */
+  sealed trait ReceiverEvent extends Serializable
+
+  /**
+   * @param actor the receiver actor
+   */
+  case class ReceiverStarted(actor: ActorRef) extends ReceiverEvent
+}
